Grouped links and node in different containers to avoid overlap

--- a/views/ngXosViews/mcordTopology/src/css/mcord.css
+++ b/views/ngXosViews/mcordTopology/src/css/mcord.css
@@ -27,7 +27,7 @@ rect {
 }
 
 .fabric-container {
-  fill: #fff;
+  fill: transparent;
   stroke: #000;
   stroke-width: 1;
 }
